--- a/pyproject_old.toml
+++ b/pyproject_old.toml
@@ -2,8 +2,8 @@
 name = "mattermost-python-sdk"
 version = "0.1.0"
 homepage = "https://github.com/wccdev/mattermost-python-sdk"
-description = ""
-authors = ["Leslie Chan <leslie_chan@wochacha.com>"]
+description = "Skeleton project created by Cookiecutter PyPackage."
+authors = ["Wochacha Dev <allaher@icloud.com>"]
 readme = "README.md"
 license =  "MIT"
 classifiers=[
@@ -23,7 +23,6 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.*,<4.0"
-requests = "^2.28.1"
 click = "8.1.3"
 
 [tool.poetry.group.dev.dependencies]
@@ -59,6 +58,45 @@ pygments = ">=2.13.0"
 [tool.poetry.scripts]
 mattermost-python-sdk = 'mattermost.cli:main'
 
+[tool.black]
+line-length = 88
+skip-string-normalization = true
+target-version = ['py38', 'py39', 'py310']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 88
+skip_gitignore = true
+# you can skip files as below
+#skip_glob = docs/conf.py
+
+[tool.commitizen]
+version = "0.1.0"
+tag_format = "v$major.$minor.$patch$prerelease"
+version_files = [
+    "pyproject.toml:version",
+    "demo_project/__init__.py"
+]
+
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
